{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 34,
  "lineage": "bf8447d7-7949-da59-d369-9e1e247d7e43",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147467062871:vpc/vpc-0ff7ea82c55cc812a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0905c79519c65c141",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0accbe55dfd7e3437",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff7ea82c55cc812a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09347c9cb00316fe9",
            "owner_id": "147467062871"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "collector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c1c093c5c9344ab",
            "arn": "arn:aws:ec2:eu-north-1:147467062871:instance/i-08ae690e541ee9643",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ae690e541ee9643",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "db-reliability-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c22d9ed2f20d040",
            "private_dns": "ip-172-31-20-251.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.251",
            "public_dns": "ec2-56-228-9-2.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.9.2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e3299719e50fd93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "db-reliability-ec2-sg-tf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06868ad67d2d05c1a",
            "tags": {
              "Name": "db-reliability-collector-tf"
            },
            "tags_all": {
              "Name": "db-reliability-collector-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-055e6dcbf72cf14a2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.mysql",
            "aws_db_instance.postgres",
            "aws_db_subnet_group.default",
            "aws_elasticache_replication_group.redis",
            "aws_elasticache_subnet_group.default",
            "aws_security_group.ec2_sg",
            "aws_security_group.mysql_sg",
            "aws_security_group.postgres_sg",
            "aws_security_group.redis_sg",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.default",
            "data.aws_vpc.default",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147467062871:security-group/sg-055e6dcbf72cf14a2",
            "description": "Allows SSH, Grafana, and self-referencing DB access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-055e6dcbf72cf14a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "ClickHouse HTTP from my IP",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "Grafana from my IP",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-reliability-ec2-sg-tf",
            "name_prefix": "",
            "owner_id": "147467062871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-reliability-ec2-sg-tf"
            },
            "tags_all": {
              "Name": "db-reliability-ec2-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff7ea82c55cc812a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147467062871:security-group/sg-0a0e7d3343ba22ae7",
            "description": "Allows MySQL access from EC2 and my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0e7d3343ba22ae7",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "MySQL from my IP for direct testing",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 instance",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055e6dcbf72cf14a2"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-reliability-mysql-sg-tf",
            "name_prefix": "",
            "owner_id": "147467062871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-reliability-mysql-sg-tf"
            },
            "tags_all": {
              "Name": "db-reliability-mysql-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff7ea82c55cc812a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147467062871:security-group/sg-05132c0599da29353",
            "description": "Allows PostgreSQL access from EC2 and my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05132c0599da29353",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "PostgreSQL from my IP for direct testing",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from EC2 instance",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055e6dcbf72cf14a2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "db-reliability-postgres-sg-tf",
            "name_prefix": "",
            "owner_id": "147467062871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-reliability-postgres-sg-tf"
            },
            "tags_all": {
              "Name": "db-reliability-postgres-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff7ea82c55cc812a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:147467062871:security-group/sg-044ae86fafcb6c118",
            "description": "Allows Redis/Valkey access from EC2 and itself",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044ae86fafcb6c118",
            "ingress": [
              {
                "cidr_blocks": [
                  "120.60.104.72/32"
                ],
                "description": "Redis from my IP for direct testing",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Allow Redis members to reach each other",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 6379
              },
              {
                "cidr_blocks": [],
                "description": "Redis from EC2 instance",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-055e6dcbf72cf14a2"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "db-reliability-redis-sg-tf",
            "name_prefix": "",
            "owner_id": "147467062871",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-reliability-redis-sg-tf"
            },
            "tags_all": {
              "Name": "db-reliability-redis-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ff7ea82c55cc812a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "data.aws_vpc.default",
            "data.http.my_ip"
          ]
        }
      ]
    }
  ]
}